<resources>
    <string name="app_name">Karakoç Tekstil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="seriesArray">
        <item>4/4</item>
        <item>8/4</item>
        <item>12/4</item>
        <item>20/4</item>
        <item>24/4</item>
    </string-array>

    <string name="patternName">Desen adı</string>
    <string name="patternWidth">Desen genişliği</string>
    <string name="patternHeight">Desen yüksekliği</string>
    <string name="patternHit">Desen vuruşu</string>
    <string name="patternStrip">Bant sayısı</string>
    <string name="create">Oluştur</string>
    <string name="selectClothType">Bez türü seçiniz</string>
    <string name="selectSeries">Rapor seçiniz</string>
    <string name="cardMeter">Kart metre</string>
    <string name="clothMeterPrice">Bez metre fiyatı($)</string>
    <string name="yarnWeightPrice">İplik kilo fiyatı($)</string>
    <string name="calculate">Hesapla</string>
    <string name="clear">Temizle</string>
    <string name="profit">Kâr</string>
    <string name="workmanship">İşçilik</string>
    <string name="costResult">Fiyat: 0</string>
    <string name="dataNotReceived">Hata. Veriler alınamadı</string>
    <string name="holderText">Deneme</string>
    <string name="patternNameExt">Desen adı\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020:</string>
    <string name="patternWidthExt">Desen genişliği\u0020\u0020\u0020\u0020\u0020:</string>
    <string name="patternHeightExt">Desen yüksekliği\u0020\u0020\:</string>
    <string name="patternHitExt">Desen vuruş\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020:</string>
    <string name="patternList">Desen Listesi</string>
    <string name="myOrders">Siparişlerim</string>
    <string name="calculatePrice">Fiyat Hesapla</string>
    <string name="exit">Çıkış</string>
    <string name="search">Ara</string>
    <string name="stripCount">Bant sayısı</string>
    <string name="clothType">Bez türü</string>
    <string name="series">Rapor</string>
    <string name="date">Tarih</string>
    <string name="selectPattern">Desen seçiniz</string>
    <string name="cm">cm</string>
    <string name="space">\u0020</string>
    <string name="status">Durum</string>
    <string-array name="typesOfClothArray">
        <item>Tela</item>
        <item>Terikoton</item>
        <item>Tül</item>
        <item>Vual</item>
    </string-array>
</resources>