<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="pattern"
            type="com.keremkulac.karakoctekstil.model.Pattern" />

        <variable
            name="clickListener"
            type="com.keremkulac.karakoctekstil.adapter.PatternClickListener" />
        <variable
            name="addPatternObject"
            type="com.keremkulac.karakoctekstil.view.AddPatternFragment" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddPatternFragment">

    <ImageView
        android:background="@drawable/popup_item_border"
        android:layout_marginTop="60dp"
        android:id="@+id/addPatternImageView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/addPatternImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="Fotoğraf seç"
        android:onClick="@{() -> addPatternObject.selectImage()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPatternImageView" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPatternImage">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/patternName">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{pattern.name}"
                    android:id="@+id/addPatternName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/patternHeight">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{pattern.height}"
                    android:id="@+id/addPatternHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"

                android:hint="@string/patternWidth">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{pattern.width}"
                    android:id="@+id/addPatternWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/patternHit">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{pattern.hit}"
                    android:id="@+id/addPatternHit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/addPatternCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create"
        android:onClick="@{() -> addPatternObject.patternCreate()}"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
