<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="order"
            type="com.keremkulac.karakoctekstil.model.Order" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_margin="10dp"
        android:layout_marginTop="80dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:background="@color/white"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:textStyle="bold"
                        android:text="@string/patternName"
                        android:layout_margin="5dp"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textStyle="bold"
                        android:text="Kupon sayısı"
                        android:layout_margin="5dp"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textStyle="bold"
                        android:text="@string/clothType"
                        android:layout_margin="5dp"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textStyle="bold"
                        android:text="@string/series"
                        android:layout_margin="5dp"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textStyle="bold"
                        android:text="Sipariş tarihi"
                        android:layout_margin="5dp"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textStyle="bold"
                        android:text="@string/status"
                        android:layout_margin="5dp"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/orderPatternName"
                        android:text="@{order.patternName}"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/orderStripCount"
                        android:text="@{order.piece}"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/orderClothType"
                        android:text="@{order.clothType}"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/orderSeries"
                        android:text="@{order.series}"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/orderDate"
                        android:text="@{order.date}"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView

                        android:id="@+id/orderStatus"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>
